# resp

./: .env  .gitignore  Cargo.toml  docker-compose.yml  start.sh
build_tools/: Cargo.toml
build_tools/src/: main.rs
client/: Cargo.toml  Web.toml  gulpfile.js  package.json
client/assets/scss/: a.scss  animate.scss  app.scss  b.scss  base.scss  helpers.scss  main.scss  mixins.scss  nav.scss  themes.scss
client/assets/scss/base/: _all.scss  _base.scss
client/assets/scss/helpers/: _mixins.scss
client/assets/scss/modules/: animate.scss
client/assets/scss/pages/: login.scss
client/assets/scss/themes/: _all.scss  dark.scss  default.scss  light.scss
client/assets/scss/vendors/: animate.scss
client/src/: main.rs
client/src/lib/: _utils.rs  mod.rs  root.rs  routes.rs
client/src/lib/components/: admin_panel.rs  counter.rs  menu.rs  mod.rs  table.rs
client/src/lib/services/: mod.rs  router.rs  routing.rs
lib/passport/: Cargo.toml
lib/passport/src/: config.rs  (+2 more)
migrations/2018-07-11-014637_users/: down.sql  up.sql
migrations/2018-07-11-020004_auth/: down.sql  up.sql
migrations/2018-07-11-020304_news/: down.sql  up.sql
src/: auth.rs  db.rs  extractors.rs  lib.rs  main.rs  middlewares.rs  models.rs  requests.rs  schema.rs  token.rs
src/controllers/: blog.rs
src/models/: mod.rs  users.rs
src/routes/: blog.rs
src/utils/: auth.rs  config.rs  http.rs  jwt.rs  mod.rs  views.rs
src/views/: login.rs
static/: htmlparser.js  index.html  parser.html
templates/: base.html  index.html  login.html
templates/blog/: index.html
tls/: cert.pem
(+3 files in other folders)
