[package]
name = "resp"
version = "0.1.0"
authors = ["0x130C <0x130c@gmail.com>"]

[dependencies]
actix = "0.5"
actix-web = "0.6.14"
diesel = { version="1.3.2", features=["postgres", "r2d2", "chrono"]}
chrono = "0.4.4"
serde = "1.0.69"
serde_json = "1.0.22"
serde_derive = "1.0.69"
futures = "0.1.21"
env_logger = "0.5.10"
listenfd = "0.3.3"
hotwatch = "0.3.1"
parking_lot = "0.6.2"
sass-rs = "0.2.1"

